# Neoprene_Byzantine

./: Cargo.toml
src/: byz_node_sorted_vec.rs  byzantine.rs  byzantine_old.txt  byzantine_old_with_rational.txt  byznode_sorted_vec.rs  generate_byznode_utils.rs  lib.rs  main.rs  neoprene.rs  neoprene_comp.rs  neoprene_taylor.rs  rational.rs  rational_range.rs
